Fix miss github

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>akinomaeni.io</title>
+    <title>akinomaeni.github.io</title>
   </head>
   <body>
-    <h1>akinomaeni.io</h1>
+    <h1>akinomaeni.github.io</h1>
   </body>
 </html>
